# ME5414-project

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: experiment_default.json  experiment_long_runtime.json
scripts/: check_env.py  run_experiments.py  setup_env.sh
src/me5414/: __init__.py  experiment.py  logging_utils.py  problem_generator.py  solvers.py
src/me5414/cli/: __init__.py  app.py
src/me5414/core/: __init__.py  config.py  models.py
src/me5414/generation/: __init__.py  problem_generator.py
src/me5414/io/: __init__.py
src/me5414/pipeline/: __init__.py  reporting.py  runner.py
src/me5414/solvers/: __init__.py  linear_solvers.py
tests/: test_smoke.py
